--- a/projector/templates/projector/project/components/edit.html
+++ b/projector/templates/projector/project/components/edit.html
@@ -4,7 +4,7 @@
 {% load pagination_tags %}
 {% load sorting_tags %}
 
-{% block col_main_extra %}
+{% block col_single_extra %}
 <div class="richtemplates-panel">
     <h5>{% trans "Edit component" %}: {{ form.instance }}</h5>
     <div class="richtemplates-panel-content">
