--- a/projector/templates/projector/project/components/home.html
+++ b/projector/templates/projector/project/components/home.html
@@ -4,7 +4,7 @@
 {% load guardian_tags %}
 {% load richtemplates_tags %}
 
-{% block col_main_extra %}
+{% block col_single_extra %}
 
 {% get_obj_perms request.user for project as "project_perms" %}
 
