--- a/projector/templates/projector/project/members/add.html
+++ b/projector/templates/projector/project/members/add.html
@@ -10,7 +10,7 @@
     {% autocomplete_field form.member %}
 {% endblock %}
 
-{% block col_main_extra %}
+{% block col_single_extra %}
 <div class="richtemplates-panel">
     <h5>{% trans "Add member" %}</h5>
     <div class="richtemplates-panel-content">
