--- a/projector/templates/projector/project/members/home.html
+++ b/projector/templates/projector/project/members/home.html
@@ -5,7 +5,7 @@
 {% load sorting_tags %}
 {% load guardian_tags %}
 
-{% block col_main_extra %}
+{% block col_single_extra %}
 
 {% autosort memberships %}
 {% autopaginate memberships %}
