--- a/projector/templates/projector/project/milestones/home.html
+++ b/projector/templates/projector/project/milestones/home.html
@@ -4,7 +4,7 @@
 {% load guardian_tags %}
 {% load richtemplates_tags %}
 
-{% block col_main_extra %}
+{% block col_single_extra %}
 
 <div class="richtemplates-panel">
     <h5>{% trans "Project's milestones" %}</h5>
