--- a/projector/templates/projector/project/teams/add.html
+++ b/projector/templates/projector/project/teams/add.html
@@ -10,7 +10,7 @@
     {% autocomplete_field form.group %}
 {% endblock %}
 
-{% block col_main_extra %}
+{% block col_single_extra %}
 <div class="richtemplates-panel">
     <h5>{% trans "Add team" %}</h5>
     <div class="richtemplates-panel-content">
