--- a/projector/templates/projector/project/teams/edit.html
+++ b/projector/templates/projector/project/teams/edit.html
@@ -7,7 +7,7 @@
     {{ form.media }}
 {% endblock %}
 
-{% block col_main_extra %}
+{% block col_single_extra %}
 
 <div class="richtemplates-panel">
     <h5>{% trans "Project's team" %}: {{ team }}</h5>
