--- a/projector/templates/projector/home.html
+++ b/projector/templates/projector/home.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
 {% load i18n %}
-{% load guardian_tags %}
 
 {% block extra_head %}
     {{ block.super }}
@@ -9,21 +8,9 @@
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}projector/css/projector.css" />
 {% endblock %}
 
-{% block menu_top %}{{ block.super }}
-<div class="menu-top-submenu">
-    <ul class="menu-top-left">
-        <li><a href="{% url projector_home %}">{% trans "Projector homepage" %}</a></li>
-        <li><a href="{% url projector_project_list %}">{% trans "Projects" %}</a></li>
-    </ul>
-    <ul class="menu-top-right">
-        {% if project %}
-            {% get_obj_perms request.user for project as "project_perms" %}
-            {% if "change_config_project" in project_perms %}
-            <li><a href="{% url projector_project_config project.author.username project.slug %}">{% trans "Settings" %}</a></li>
-            {% endif %}
-        {% endif %}
-    </ul>
-</div>
+{% block menu_top %}
+    {{ block.super }}
+    {% include "projector/menu.html" %}
 {% endblock %}
 
 {% block col_left %}
