--- a/projector/templates/projector/project/components/add.html
+++ b/projector/templates/projector/project/components/add.html
@@ -12,7 +12,7 @@
     </script>
 {% endblock %}
 
-{% block col_main_extra %}
+{% block col_single_extra %}
 <div class="richtemplates-panel">
     <h5>{% trans "Add component" %}</h5>
     <div class="richtemplates-panel-content">
