--- a/projector/templates/projector/project/members/delete.html
+++ b/projector/templates/projector/project/members/delete.html
@@ -5,7 +5,7 @@
 {% load sorting_tags %}
 {% load native %}
 
-{% block col_main_extra %}
+{% block col_single_extra %}
 <div class="richtemplates-panel">
     <h5>{% trans "Remove member" %}</h5>
     <div class="richtemplates-panel-content">
@@ -21,7 +21,7 @@
             <h2>{% trans "Permissions currently given to member" %} {{ membership.member }}</h2>
             <ul>
                 {% for perm in member_perms %}
-                <li>{{ perm }}</li>
+                <li>{{ perm.permission.name }}</li>
                 {% endfor %}
             </ul>
         </div>
