--- a/projector/templates/projector/project/milestones/add.html
+++ b/projector/templates/projector/project/milestones/add.html
@@ -12,7 +12,7 @@
     </script>
 {% endblock %}
 
-{% block col_main_extra %}
+{% block col_single_extra %}
 <div class="richtemplates-panel">
     <h5>{% trans "Project's milestones" %}</h5>
     <div class="richtemplates-panel-content">
