--- a/projector/templates/projector/project/workflow/detail.html
+++ b/projector/templates/projector/project/workflow/detail.html
@@ -4,9 +4,9 @@
 {% load i18n %}
 {% load guardian_tags %}
 
-{% block col_main_title %}{{ project.name }}{% endblock %}
+{% block col_single_title %}{{ project.name }}{% endblock %}
 
-{% block col_main_extra %}
+{% block col_single_extra %}
 {% get_obj_perms request.user for project as "project_perms" %}
 <div class="richtemplates-panel">    
     <h5>{% trans "Workflow schema" %}</h5>
@@ -43,5 +43,5 @@
 
     </div>
 </div>
-{% endblock col_main_extra %}
+{% endblock col_single_extra %}
 
