--- a/projector/templates/projector/project/detail.html
+++ b/projector/templates/projector/project/detail.html
@@ -112,7 +112,7 @@
     <div class="richtemplates-panel-content">
         <h1>{{ project.name }}</h1>
         <ul class="nav-inline">
-            <li class="richbuttonset"><a class="button-link" href="{{ project.get_absolute_url }}">{% trans "Project details" %}</a></li>
+            <li class="richbuttonset"><a class="button-link" href="{{ project.get_absolute_url }}">{% trans "Project detail" %}</a></li>
             {% if project.get_repo_url %}
             <li class="richbuttonset"><a class="button-link" href="{{ project.get_browse_repo_url }}">{% trans "Sources" %}</a></li>
             {% endif %}
@@ -155,7 +155,7 @@
 </div>
     {% block col_single_extra %}
 <div class="richtemplates-panel">    
-    <h5>{% trans "Project details" %}</h5>
+    <h5>{% trans "Project detail" %}</h5>
     <div class="richtemplates-panel-content">
         <div class="richblock">
             <table class="richblock-properties">
