--- a/projector/templates/projector/accounts/dashboard-convert-confirm.html
+++ b/projector/templates/projector/accounts/dashboard-convert-confirm.html
@@ -2,8 +2,8 @@
 
 {% load i18n %}
 
-{% block col_main_title %}{% trans "Convert to team" %}{% endblock %}
-{% block col_main_extra %}
+{% block col-main-title %}{% trans "Convert to team" %}{% endblock %}
+{% block col-main-extra %}
 <div class="richtemplates-panel">
     <h5>{% trans "Convert to team" %}</h5>
     <div class="richtemplates-panel-content">
