--- a/projector/templates/projector/project/edit.html
+++ b/projector/templates/projector/project/edit.html
@@ -1,6 +1,6 @@
 {% extends "projector/project/detail.html" %}
 
-{% block extra_head %}
+{% block extra-head %}
     {{ block.super }}
     <script type="text/javascript">
         $(document).ready(function(){
@@ -11,7 +11,7 @@
 
 {% load i18n %}
 
-{% block col_single_extra %}
+{% block col-single-extra %}
 
 <div class="richtemplates-panel">
     <h5>{% trans "Project's edit panel" %}</h5>
