--- a/projector/templates/projector/project/repository/annotate.html
+++ b/projector/templates/projector/project/repository/annotate.html
@@ -4,7 +4,7 @@
 {% load native %}
 {% load breadcrumber %}
 
-{% block browse_content %}
+{% block browse-content %}
 <div id="repo-browser">
 
     <div class="codeblock">
