--- a/projector/templates/projector/project/task/attachment.html
+++ b/projector/templates/projector/project/task/attachment.html
@@ -1,6 +1,6 @@
 {% extends "projector/project/task/attachment.html" %}
 
-{% block col_main_content %}
+{% block col-main-content %}
 <h1>Task {{ task.id }}: {{ task.summary }}</h1>
 <label>{{ attachment.name }}</label>
     <p>
