--- a/projector/templates/projector/project/task/dynform.html
+++ b/projector/templates/projector/project/task/dynform.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block col_main_content %}
+{% block col-main-content %}
 <form action="." method="post">
     <table>
         {#  {{ form }} #}
