--- a/projector/templates/projector/project_category/create.html
+++ b/projector/templates/projector/project_category/create.html
@@ -1,8 +1,8 @@
 {% extends "projector/home.html" %}
 
-{% block col_main_title %}Project Category Creation {% endblock %}
+{% block col-main-title %}Project Category Creation {% endblock %}
 
-{% block col_main_content %}
+{% block col-main-content %}
     <form action="." method="post">
     <table class="form-table">
         {% include "richtemplates/forms/form.html" %}
