--- a/projector/templates/projector/project_category/details.html
+++ b/projector/templates/projector/project_category/details.html
@@ -1,8 +1,8 @@
 {% extends "projector/home.html" %}
 
-{% block col_main_title %}{{ project_category.name }}{% endblock %}
+{% block col-main-title %}{{ project_category.name }}{% endblock %}
 
-{% block col_main_content %}
+{% block col-main-content %}
     <h1>{{ project_category.name }}</h1>
 
     <h2>Related projects:</h2>
