--- a/projector/templates/projector/project_category/list.html
+++ b/projector/templates/projector/project_category/list.html
@@ -1,8 +1,8 @@
 {% extends "projector/home.html" %}
 
-{% block col_main_title %}Project Category List{% endblock %}
+{% block col-main-title %}Project Category List{% endblock %}
 
-{% block col_main_content %}
+{% block col-main-content %}
 
     {% load pagination_tags %}
     {% autopaginate project_category_list %}
