--- a/example_project/templates/base.html
+++ b/example_project/templates/base.html
@@ -6,7 +6,7 @@
     {#<img id="top_logo" src="{{ MEDIA_URL }}img/logo.png"/>#}
 {% endblock %}
 
-{% block menu_top %}
+{% block menu-top %}
     {% include "layout/menu_top.html" %}
 {% endblock %}
 
