--- a/example_project/templates/layout/menu_top.html
+++ b/example_project/templates/layout/menu_top.html
@@ -1,12 +1,12 @@
 {% extends "richtemplates/layout/menu_top.html" %}
 {% load i18n %}
 
-{% block menu_top_left %}
+{% block menu-top-left %}
     <li><a href="/">Home</a></li>
     <li><a href="{% url projector_home %}">Projector</a></li>
 {% endblock %}
 
-{% block menu_top_right %}
+{% block menu-top-right %}
     <li>
     {% if not user.is_authenticated %}
         <a href="{% url auth_login %}">{% trans "Login" %}</a>
