--- a/projector/templates/projector/project/components/add.html
+++ b/projector/templates/projector/project/components/add.html
@@ -4,7 +4,7 @@
 {% load pagination_tags %}
 {% load sorting_tags %}
 
-{% block extra_head %}{{ block.super }}
+{% block extra-head %}{{ block.super }}
     <script type="text/javascript">
         $(document).ready(function(){
             $('#id_name').slugify('#id_slug');
@@ -12,11 +12,11 @@
     </script>
 {% endblock %}
 
-{% block col_single_extra %}
+{% block col-single-extra %}
 <div class="richtemplates-panel">
     <h5>{% trans "Add component" %}</h5>
     <div class="richtemplates-panel-content">
-        {% block components_menu %}{{ block.super }}{% endblock %}
+        {% block components-menu %}{{ block.super }}{% endblock %}
         <form action="." method="post">
             {% csrf_token %}
             <table class="form-table">
