--- a/projector/templates/projector/project/components/edit.html
+++ b/projector/templates/projector/project/components/edit.html
@@ -4,11 +4,11 @@
 {% load pagination_tags %}
 {% load sorting_tags %}
 
-{% block col_single_extra %}
+{% block col-single-extra %}
 <div class="richtemplates-panel">
     <h5>{% trans "Edit component" %}: {{ form.instance }}</h5>
     <div class="richtemplates-panel-content">
-        {% block components_menu %}{{ block.super }}{% endblock %}
+        {% block components-menu %}{{ block.super }}{% endblock %}
         <form action="." method="post">
             {% csrf_token %}
             <table class="form-table">
