--- a/projector/templates/projector/project/components/home.html
+++ b/projector/templates/projector/project/components/home.html
@@ -4,14 +4,14 @@
 {% load guardian_tags %}
 {% load richtemplates_tags %}
 
-{% block col_single_extra %}
+{% block col-single-extra %}
 
 {% get_obj_perms request.user for project as "project_perms" %}
 
 <div class="richtemplates-panel">
     <h5>{% trans "Project's components" %}</h5>
     <div class="richtemplates-panel-content">
-    {% block components_menu %}
+    {% block components-menu %}
     <ul class="nav-inline">
         <li class="richbuttonset">
             <a class="button-link" href="{{ project.get_components_url }}">{% trans "Components" %}</a>
