--- a/projector/templates/projector/project/create.html
+++ b/projector/templates/projector/project/create.html
@@ -1,6 +1,6 @@
 {% extends "projector/home.html" %}
 
-{% block extra_head %}
+{% block extra-head %}
     {{ block.super }}
     <script type="text/javascript">
         $(document).ready(function(){
@@ -11,9 +11,9 @@
 
 {% load i18n %}
 
-{% block col_main_title %}{% blocktrans %}Create new project{% endblocktrans %}{% endblock %}
+{% block col-main-title %}{% blocktrans %}Create new project{% endblocktrans %}{% endblock %}
 
-{% block col_main_content %}
+{% block col-main-content %}
     <form action="." method="post">
         {% csrf_token %}
         <table class="form-table">
