--- a/projector/templates/projector/project/detail.html
+++ b/projector/templates/projector/project/detail.html
@@ -5,7 +5,7 @@
 {% load guardian_tags %}
 {% load native %}
 
-{% block extra_head %}{{ block.super }}
+{% block extra-head %}{{ block.super }}
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}projector/css/browser.css" />
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}projector/css/projector.css" />
 <script type="text/javascript">
@@ -23,13 +23,13 @@
 </script>
 {% endblock %}
 
-{% block menu_top %}
+{% block menu-top %}
     {{ block.super }}
     {% include "projector/menu.html" %}
 {% endblock %}
 
 {% comment %}
-{% block col_left %}{{ block.super }}
+{% block col-left %}{{ block.super }}
 
 {% get_obj_perms request.user for project as "project_perms" %}
 
@@ -103,9 +103,9 @@
 {% endblock %}
 {% endcomment %}
 
-{% block col_single_title %}{{ project.name }}{% endblock %}
+{% block col-single-title %}{{ project.name }}{% endblock %}
 
-{% block col_single %}
+{% block col-single %}
 {% get_obj_perms request.user for project as "project_perms" %}
 <div class="richtemplates-panel">
     <h5>{{ project.name }}</h5>
@@ -153,7 +153,7 @@
     
     </div>
 </div>
-    {% block col_single_extra %}
+    {% block col-single-extra %}
 <div class="richtemplates-panel">    
     <h5>{% trans "Project detail" %}</h5>
     <div class="richtemplates-panel-content">
@@ -215,7 +215,7 @@
         
     </div>
 </div>
-    {% endblock col_single_extra %}
+    {% endblock col-single-extra %}
 
-{% endblock col_single %}
+{% endblock col-single %}
 
