--- a/projector/templates/projector/project/members/add.html
+++ b/projector/templates/projector/project/members/add.html
@@ -5,16 +5,16 @@
 {% load sorting_tags %}
 {% load native %}
 
-{% block extra_head %}{{ block.super }}
+{% block extra-head %}{{ block.super }}
     {{ form.media }}
     {% autocomplete_field form.member %}
 {% endblock %}
 
-{% block col_single_extra %}
+{% block col-single-extra %}
 <div class="richtemplates-panel">
     <h5>{% trans "Add member" %}</h5>
     <div class="richtemplates-panel-content">
-        {% block members_menu %}{{ block.super }}{% endblock %}
+        {% block members-menu %}{{ block.super }}{% endblock %}
         <form action="." method="post">
             {% csrf_token %}
             <table class="form-table">
