--- a/projector/templates/projector/project/repository/browse.html
+++ b/projector/templates/projector/project/repository/browse.html
@@ -5,8 +5,8 @@
 {% load native %}
 
 {% comment %}
-{% block col_left %}{{ block.super }}
-{% block info_block %}
+{% block col-left %}{{ block.super }}
+{% block info-block %}
 <div class="richtemplates-panel">
     <h5>{% trans "Node's information" %}</h5>
     <div class="richtemplates-panel-content">
@@ -72,17 +72,17 @@
         </div>
     </div>
 </div>
-{% endblock info_block %}
+{% endblock info-block %}
 {% endblock %}
 {% endcomment %}
 
-{% block col_single_extra %}
+{% block col-single-extra %}
 
 <div class="richtemplates-panel">
     <h5>{% trans "Project's repository browser" %}</h5>
     <div class="richtemplates-panel-content">
 
-    {% block repository_menu %}
+    {% block repository-menu %}
     <ul class="nav-inline">
         <li class="richbuttonset">
             <a href="{{ project.get_browse_repo_url }}">{% trans "Sources" %}</a>
@@ -91,7 +91,7 @@
     </ul>
     {% endblock %}
 
-    {% block browse_content %}
+    {% block browse-content %}
     <div id="repo-browser">
         {% load breadcrumber %}
         <div class="browser-breadcrumbs">
