--- a/projector/templates/projector/project/teams/add.html
+++ b/projector/templates/projector/project/teams/add.html
@@ -5,12 +5,12 @@
 {% load sorting_tags %}
 {% load native %}
 
-{% block extra_head %}{{ block.super }}
+{% block extra-head %}{{ block.super }}
     {{ form.media }}
     {% autocomplete_field form.group %}
 {% endblock %}
 
-{% block col_single_extra %}
+{% block col-single-extra %}
 <div class="richtemplates-panel">
     <h5>{% trans "Add team" %}</h5>
     <div class="richtemplates-panel-content">
