--- a/projector/templates/projector/project/teams/home.html
+++ b/projector/templates/projector/project/teams/home.html
@@ -5,7 +5,7 @@
 {% load sorting_tags %}
 {% load guardian_tags %}
 
-{% block col_single_extra %}
+{% block col-single-extra %}
 
 {% autosort team_list %}
 {% autopaginate team_list %}
@@ -14,7 +14,7 @@
     <h5>{% trans "Projects' teams" %}</h5>
     <div class="richtemplates-panel-content">
 
-        {% block teams_menu %}
+        {% block teams-menu %}
         {% get_obj_perms request.user for project as "project_perms" %}
 
         <ul class="nav-inline">
